2001-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-imagick-convert-buffer): Say errors and return
	nil if the process returns a non-zero status (possibly a string).

2001-12-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-xmas.el (w3m-create-image): Bind some arguments lexically
	for w3m-fix-gif().

2001-12-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-setup-favicon): Fix for "about://" url.
	(w3m-buffer-favicon): Renamed local variable.
	(w3m-tab-line): Call `w3m-buffer-favicon' only when w3m-use-favicon
	is non-nil.

2001-12-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-modeline-process-status-on): Modify default value.
	(w3m-buffer-setup): Simplified `mode-line-buffer-identification'.

2001-11-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-imagick-convert-program): New user option.
	(w3m-favicon-size): Ditto.
	(w3m-use-favicon): Ditto.
	(w3m-favicon-name): New constant.
	(w3m-current-favicon-data): New buffer local variable.
	(w3m-current-favicon-image): Ditto.
	(w3m-display-hook): Added 'w3m-setup-favicon.
	(w3m-imagick-convert-buffer): New function.
	(w3m-imagick-convert-data): Ditto.
	(w3m-setup-favicon): Ditto.
	(w3m-buffer-favicon): Ditto.
	(w3m-retrieve-favicon): Ditto.
	(w3m-tab-line): Display favicon on tab.

2001-11-28  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-insert-image): Rewrite.
	(if displayed images exist on the right side, keep them and display
	again)
	(w3m-remove-image): Call `delete-extent' to destroy extents.

2001-11-27  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* TIPS: New file.

2001-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-get-headers): Make directory
	separator not duplicated.

2001-11-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-download-this-url): Fix a problem of broken URL.

2001-11-24  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-fml.el (shimbun-get-headers): Call