@@ -1,3 +1,8 @@
+2001-12-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m-e21.el (w3m-buffer-favicon): Reset `w3m-current-favicon-data'
+	to nil when conversion was failure.
+
 2001-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-e21.el (w3m-imagick-convert-buffer): Say errors and return
